--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -96,7 +96,8 @@ body {
           text-align: left;
           font-weight: 600;
           font-size: 1.5rem;
-          letter-spacing: 1.5px;
+          letter-spacing: 0.1rem;
+        
           margin-bottom: 1rem;
         }
         p {
