--- a/src/scss/app.scss
+++ b/src/scss/app.scss
@@ -68,6 +68,7 @@ body {
       align-items: center;
       .list {
         width: 90%;
+        margin-bottom: 2rem;
         ul {
           display: flex;
           flex-direction: column;
